LFA/chart-helm/templates/ingress.yaml
#Derived from https://learn.microsoft.com/en-us/azure/aks/http-application-routing
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lfa-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: lfa2.134203787e9d4f5a9c5c.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: lfa
            port: 
              number: 5002
  - host: lfa3.134203787e9d4f5a9c5c.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: lfa
            port: 
              number: 5001
  - host: lfa4.134203787e9d4f5a9c5c.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: lfa
            port: 
              number: 5000
  - host: cs.134203787e9d4f5a9c5c.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cssimulator
            port: 
              number: 5000
